--- a/.github/workflows/check-redirects-on-rename.yml
+++ b/.github/workflows/check-redirects-on-rename.yml
@@ -42,7 +42,7 @@ jobs:
           echo "$OUTPUT"
 
           # Extract JSON output if present
-          if echo "$OUTPUT" | grep -q "---JSON_OUTPUT---"; then
+          if echo "$OUTPUT" | grep -Fq "---JSON_OUTPUT---"; then
             JSON_OUTPUT=$(echo "$OUTPUT" | sed -n '/---JSON_OUTPUT---/,/---JSON_OUTPUT---/p' | sed '1d;$d')
             echo "validation_result<<EOF" >> $GITHUB_OUTPUT
             echo "$JSON_OUTPUT" >> $GITHUB_OUTPUT
